<resources>
    <string name="app_name">Int20h</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="btnRegistrationText">Registration</string>
    <string name="nameRegistrationHint">Name</string>
    <string name="surnameRegistrationHint">Surname</string>
    <string name="emailRegistrationHint">Email</string>
    <string name="passwordRegistrationHint">Password</string>
    <string name="no_search_result">К сожалению, поиск не дал результатов, но вы можете оставить запрос на искомый товар или услугу</string>
    <string name="create_request">Создать запрос</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="category">Категория: %s</string>
    <string name="price">Цена:</string>
    <string name="rating">Рейтинг:</string>
    <string name="order">Заказать</string>
    <string name="item_rating">Рейтинг: %d</string>
</resources>
