<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/email"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:hint="@string/login_email"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:hint="@string/login_password"></EditText>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btnRegistrationText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLoginText" />
    </TableRow>


</LinearLayout>